added reservation endpoint, fixed issues with staff messages
