# routes/index.js
@@ -5,6 +5,7 @@ router.use('/guest', require('./guest'));
 router.use('/rooms', require('./rooms'));
 router.use('/services', require('./services'));
 router.use('/staff', require('./staff'));
+router.use('/reservations', require('./reservation'))
 router.use('/', require('./swagger'));
 
 module.exports = router;
